// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthRoutes /> Given the user is logged in should render the Route without any redirect 1`] = `
<AuthRoutes
  isLoggedIn={true}
  to="/login"
  trampolineRedirect={[Function]}
>
  <div>
    <MockRoute
      component="checkout"
      mockAdd={[Function]}
      mockHide={[Function]}
      mockRemove={[Function]}
      mockShow={[Function]}
      path="/checkout"
    />
  </div>
</AuthRoutes>
`;

exports[`<AuthRoutes /> Given the user is logged out should render the redirect 1`] = `
<AuthRoutes
  isLoggedIn={false}
  to="/login"
  trampolineRedirect={[Function]}
>
  <div>
    <Redirect
      path="/checkout"
      to="/login"
    />
  </div>
</AuthRoutes>
`;
